feat: Improve Tailwind CSS and Gemini service reliability
Switched Tailwind CSS to a UNPKG mirror for better accessibility.
Refactored Gemini service to use direct `response.text` property access and added error handling for JSON parsing.
Enhanced user login flow to ensure active division is set correctly and added a placeholder for when no division is active.

--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SyncOps - Operational Excellence</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    
+    <!-- Menggunakan Mirror unpkg.com untuk Tailwind (Solusi jika cdn.tailwindcss.com diblokir) -->
+    <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
+    
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <style>
         body {
             font-family: 'Inter', sans-serif;
             background-color: #f8fafc;
+            margin: 0;
+            padding: 0;
         }
         .custom-scrollbar::-webkit-scrollbar {
             width: 6px;
@@ -25,7 +30,8 @@
             background: #94a3b8;
         }
     </style>
-<script type="importmap">
+
+    <script type="importmap">
 {
   "imports": {
     "react": "https://esm.sh/react@19.0.0",
